--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-                    &nbsp; &nbsp; &nbsp; &nbsp;  
+                    &nbsp; &nbsp; 
                  
                     
                    <li > <a href="index.html"> About </a> </li> 
