--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> 
             About Page 
         </title>
-        <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet" />
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
     </head>
