--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
             About Page 
         </title>
         <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet" />
+
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
     </head>
@@ -36,10 +40,11 @@
             <section class="body-content">
                 <h2> About Sam </h2>
 
-                <hr>
+             <hr width="95%">
+
                 <br>
 
-                <img class="img1" src="assets/images/avatar.png" title="profile picture" alt="profile picture">
+                <img class="img1" src="assets/images/avatar.png" title="profile picture" alt="profile picture" >
 
                 <p>Sam is a 508 analyst, with experience managing and leading large teams.</p>
                 <p>His background in accessibility tools, 508 standards and backend software 
