--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
             Contact Page 
         </title>
         <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
 
     </head>
 
