--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
             Portfolio Page
         </title>
         <link href="https://fonts.googleapis.com/css?family=Caveat|Open+Sans:400,700" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="assets/CSS/style.css" />
 
 
