--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" type="text/css" href="/assets/CSS/style.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
 
     </head>
 
@@ -48,7 +48,7 @@
 
                 <br>
 
-                <img class="img1" src="assets/images/avatar.png" title="profile picture" alt="profile picture" >
+                <img class="img1" src="avatar.png" title="profile picture" alt="profile picture" >
 
                 <p>Sam is a 508 analyst, with experience managing and leading large teams.</p>
                 <p>His background in accessibility tools, 508 standards and backend software 
